[gd_scene load_steps=2 format=3 uid="uid://xl3jjcu7ko3m"]

[ext_resource type="Script" path="res://Levels/pause_menu.gd" id="1_k2amn"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2amn")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Pause
"

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="UnpauseButton" type="Button" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Unpause"

[node name="MenuButton" type="Button" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Menu"

[node name="QuitButton" type="Button" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[connection signal="pressed" from="CenterContainer2/VBoxContainer/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
